# openhands

./: AGENTS.md  CONTRIBUTING.md  CREDITS.md  Development.md  README.md  docker-compose.override.yml  docker-compose.yml  init-db.js  one-click.sh  package-lock.json  package.json  pyproject.toml  release-please-config.cloud.json  release-please-config.json  server.js
.devcontainer/: devcontainer.json
.github/actions/docker-image-tags/: action.yml
.github/workflows/: _build-image.yml  check-package-versions.yml  check-version-consistency.yml  enterprise-apply-migrations-test-db.yml  enterprise-check-migrations.yml  fe-e2e-tests.yml  fe-unit-tests.yml  ghcr-build.yml  issue-opened.yml  lint-fix.yml  lint.yml  npm-publish-ui.yml  openhands-resolver.yml  pr-artifacts.yml  pr-review-by-openhands.yml  pr.yml  py-tests.yml  pypi-release.yml  release.yml  remove-duplicate-candidate-label.yml  tag-image.yml  ui-build.yml  welcome-good-first-issue.yml
.openhands/microagents/: glossary.md
.pr/14080/: notes.md
.pr/14080/logs/: enterprise-lint-file.txt  pre-commit.txt  root-pytest.txt
backend/data/: v6.db
backend/src/core/: sanitizer.ts
backend/src/db/: schema.sql
containers/app/: Dockerfile  entrypoint.sh
containers/dev/: compose.yml
dev_config/python/: .pre-commit-config.yaml  mypy.ini  ruff.toml
docker/compose/: docker-compose.yml
docker/config/mem0/: config.yaml
docker/config/searxng/: settings.yml
enterprise/: saas_server.py
enterprise/dev_config/python/: .pre-commit-config.yaml  mypy.ini  ruff.toml
enterprise/doc/architecture/: README.md
enterprise/docs/: runtime-api-v2-deployment.md
enterprise/enterprise_local/: README.md  convert_to_env.py
enterprise/integrations/: utils.py
enterprise/integrations/bitbucket/: bitbucket_manager.py  bitbucket_service.py  bitbucket_v1_callback_processor.py
enterprise/integrations/bitbucket_data_center/: bitbucket_dc_manager.py  bitbucket_dc_service.py  bitbucket_dc_v1_callback_processor.py
enterprise/integrations/github/: github_manager.py  github_service.py  github_solvability.py  github_v1_callback_processor.py  github_view.py
enterprise/integrations/gitlab/: gitlab_manager.py  gitlab_service.py  gitlab_v1_callback_processor.py  gitlab_view.py
enterprise/integrations/jira/: jira_manager.py  jira_payload.py  jira_v1_callback_processor.py
enterprise/integrations/jira_dc/: jira_dc_manager.py  jira_dc_service_account.py  jira_dc_user_token.py  jira_dc_v1_callback_processor.py  jira_dc_view.py
enterprise/integrations/slack/: slack_manager.py  slack_types.py  slack_v1_callback_processor.py  slack_view.py
enterprise/migrations/: env.py
enterprise/migrations/versions/: 108_add_agent_settings_to_enterprise_settings.py  117_add_event_callback_composite_index.py  117_add_oauth_tokens_to_jira_dc_users.py  118_add_acp_agent_settings_snapshot.py  118_add_conversation_metadata_saas_indexes.py  119_add_acp_session_mirror_columns.py  119_add_is_default_to_org.py
enterprise/server/: config.py  middleware.py  rate_limit.py  saas_nested_conversation_manager.py
enterprise/server/auth/: authorization.py  constants.py  gitlab_sync.py  token_manager.py
enterprise/server/mcp/: mcp_config.py
enterprise/server/routes/: auth.py  bitbucket_dc_proxy.py  mcp_patch.py  org_invitation_models.py  org_invitations.py  org_models.py  org_profiles.py  orgs.py  usage_dashboard.py  usage_dashboard_models.py  users_v1.py
enterprise/server/services/: automation_event_service.py  email_service.py  org_invitation_service.py  usage_dashboard_service.py
enterprise/server/sharing/: sql_shared_conversation_info_service.py
enterprise/server/utils/: saas_app_conversation_info_injector.py
enterprise/server/verified_models/: verified_model_router.py
enterprise/storage/: __init__.py  base.py  default_org_service.py  jira_dc_integration_store.py  jira_dc_user.py  lite_llm_manager.py  org.py  org_app_settings_store.py  org_invitation_store.py  org_llm_settings_store.py  org_member.py  org_member_store.py  org_service.py  org_store.py  saas_settings_store.py  stored_conversation_metadata_saas.py  user_settings.py  user_store.py
enterprise/tests/unit/: conftest.py  test_auth_middleware.py  test_billing.py  test_default_org_service.py  test_email_service.py  test_github_view.py  test_gitlab_view.py  test_lite_llm_manager.py  test_logger.py  test_maintenance_task_runner_standalone.py  test_migration_108_add_agent_settings.py  test_org_invitation_service.py  test_org_invitations_router.py  test_org_member_store.py  test_org_profiles.py  test_org_service.py  test_org_store.py  test_saas_server.py  test_user_store.py  (+3 more)
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/__tests__/: conversation-websocket-handler.test.tsx  query-client-config.test.ts  router.md
frontend/src/: entry.client.tsx  query-client-config.ts  routes.ts
litellm/: config.yaml  config.yaml.bak
n8n-skills/awesome-hermes/: README.md
n8n-workflows/: hermes-skills-workflow.json
openhands/: __init__.py  version.py
openhands-docs/src/: App.tsx
openhands/app_server/: README.md  app.py  config.py  constants.py  middleware.py  shared.py  types.py  version.py
openhands/core/: exceptions.py  logger.py  main.py  setup.py
openhands/db/: __init__.py  ssl.py
openhands/events/: event.py
openhands/integrations/: provider.py  service_types.py
openhands/llm/: fn_call_converter.py
openhands/mcp/: client.py  utils.py
openhands/microagent/: microagent.py
openhands/runtime/: action_execution_server.py  base.py
openhands/server/: __main__.py  app.py  listen.py  middleware.py  settings.py  shared.py  static.py  types.py
openhands/storage/: locations.py
openhands/utils/: conversation_summary.py  import_utils.py  jsonpatch_compat.py  llm.py  prompt.py  shutdown_listener.py  utils.py
router/: routing_rules.md
scripts/: check_enterprise_migration_integrity.py  update_openapi.py
skills/: README.md
tests/runtime/: test_mcp_action.py  test_microagent.py
tests/unit/: test_enterprise_migration_integrity.py  test_forgejo_service.py
(+371 files in other folders)
